name:                LambdaLudo
version:             0.1.0.0
synopsis:            A simple square-tile based 2D game engine.
description:         Please see README.md
homepage:            https://github.com/tauli/LambdaLudo#readme
license:             BSD3
license-file:        LICENSE
author:              Jürgen Peters
maintainer:          taulmarill@xgn.de
copyright:           2017 Jürgen Peters
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LambdaLudo
                     , LambdaLudo.Types
  build-depends:       base       >= 4.7   && < 5
                     , mtl
                     , sdl2       >= 2.1.3 && < 3
                     , sdl2-image
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tauli/LambdaLudo
